@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 
 #  Licensed to the Apache Software Foundation (ASF) under one or more
 #  contributor license agreements.  See the NOTICE file distributed with
@@ -15,5 +15,23 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-MODULES=$(cd $(dirname $0) && pwd)
-java --module-path $MODULES/modules;$MODULES/modules-thirdparty --add-modules org.apache.logging.log4j --module lucene.luke
+MODULES=`dirname "$0"`/..
+MODULES=`cd "$MODULES" && pwd`
+
+# check for overridden launch command (for use in integration tests), otherwise
+# use the default.
+if [ -z "$LAUNCH_CMD" ]; then
+  LAUNCH_CMD=java
+  LAUNCH_OPTS=
+else
+  # We are integration-testing. Force UTF-8 as the encoding.
+  LAUNCH_OPTS=-Dfile.encoding=UTF-8
+  # check if Xvfb is available
+  if command -v xvfb-run > /dev/null 2>&1; then
+    LAUNCH_OPTS="$LAUNCH_CMD $LAUNCH_OPTS"
+    LAUNCH_CMD="xvfb-run"
+  fi
+fi
+
+"$LAUNCH_CMD" $LAUNCH_OPTS --module-path "$MODULES/modules:$MODULES/modules-thirdparty" --module org.apache.lucene.luke "$@"
+exit $?
